fix: Address overflow issue
The issue is due to search bar clamp value being too large.
ref O-86

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
 
 .sidebar {
   width: var(--sidebar-width);
-  min-height: 100vh;
+  height: 110vh;
   background-color: var(--primary-color);
   grid-row: 1 / span 2;
   order: 2;
@@ -39,13 +39,12 @@ a {
 main {
   margin-left: var(--sidebar-width);
   display: grid;
-  grid-template: auto auto / 1fr;
+  grid-template: auto 100vh / 1fr;
 }
 
 .header {
   font-weight: bold;
   background-color: var(--secondary-color);
-  grid-column: 2 / span 1;
   display: grid;
   grid-template: repeat(2, 1fr) / auto 35%;
   padding: 1rem 2rem;
@@ -60,13 +59,12 @@ main {
 
 .content {
   background-color: var(--background-color);
-  grid-area: 2 / 2 / span 1 / span 1;
   display: grid;
   grid-template: repeat(2, 1fr) / auto 25%;
   gap: 13px;
   padding: 13px;
   overflow: auto;
-  min-height: 1000px;
+  grid-row: 2 / 3;
 }
 
 .sidebar > * {
@@ -107,7 +105,7 @@ nav ul {
 }
 
 .search-bar input {
-  width: clamp(200px, 50vw, 50vw);
+  width: clamp(300px, 100%, 600px);
   border-radius: var(--sidebar-menu-size);
   background-color: var(--background-color);
 }
@@ -118,7 +116,7 @@ nav ul {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  width: clamp(300px, 300px, 20vw);
+  width: clamp(200px, 100%, 300px);
   justify-self: end;
 }
 
